# EmphysemaSeg

./: .gitignore  Dockerfile  README.md  example_config.YAML  pyproject.toml
EmphysemaSeg/: __main__.py  main.py  utils.py
